[package]
name = "siertrichain"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_decimal = { version = "1.35.0", features = ["serde", "maths"] }
rust_decimal_macros = "1.35.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = "0.7"
num-traits = "0.2"
blake3 = "1.5.1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10.8"
rusqlite = { version = "0.28.0", features = ["bundled"] }
bs58 = "0.4.0"
toml = "0.5.8"
bincode = "1.3.3"
hex = "0.4.3"
serde_json = "1.0"
clap = { version = "3.2.25", features = ["derive"] }
tiny_http = "0.12"

[dev-dependencies]

[[bin]]
name = "miner"
path = "src/bin/miner.rs"

[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"

[[bin]]
name = "dex"
path = "src/bin/dex.rs"

[[bin]]
name = "marketplace"
path = "src/bin/marketplace.rs"
